[package]
name = "async-port-scanner"
version = "0.1.3"
authors = ["Ben Parli <bparli@gmail.com>"]
edition = "2018"
keywords = ["async", "network", "scan", "monitoring"]
categories = ["network-programming"]
description = "Simple, yet fast, async port scanner library for Rust"
license = "MIT"
repository = "https://github.com/bparli/port-scanner"
homepage = "https://github.com/bparli/port-scanner"
readme = "README.md"

[dependencies]
futures = "0.3"
async-std = "1.5"
